--- a/historic_model_comparison.ipynb
+++ b/historic_model_comparison.ipynb
@@ -20,6 +20,8 @@
     "from sklearn import model_selection\n",
     "from sklearn.model_selection import RepeatedKFold\n",
     "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import learning_curve\n",
+    "from sklearn.model_selection import ShuffleSplit\n",
     "\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Flatten\n",
@@ -1462,20 +1464,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1645,55 +1633,6 @@
    "metadata": {},
    "source": [
     "Looks like the orignial SV was the best"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The best performing SVM uses a linear kernel and has a tolerance of .00005"
    ]
   },
   {
@@ -2405,13 +2344,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now lets train the optimal model"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
@@ -2799,7 +2731,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "More Cross Validation"
+    "More Cross Validation and Assessment of Test performance "
    ]
   },
   {
@@ -3144,32 +3076,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LEARNING CURVES!!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import learning_curve"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for model in models:\n",
-    "#     scoring = 'accuracy_score'\n",
-    "#     est = model[1]\n",
-    "#     train_sizes, train_scores, test_scores, fit_times, _ = learning_curve(est, train_historic_x, train_historic_y, cv=model_selection.KFold(n_splits=5, random_state=seed, shuffle=True) ,return_times=True, n_jobs=-1)\n",
-    "#     plt.plot(train_sizes,np.mean(train_scores,axis=1))\n",
-    "#     plt.title(str(model[0]))\n",
-    "#     plt.show()\n",
-    "    "
+    "LEARNING CURVES"
    ]
   },
   {
@@ -3178,10 +3085,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import learning_curve\n",
-    "from sklearn.model_selection import ShuffleSplit\n",
-    "\n",
-    "\n",
     "def plot_learning_curve(\n",
     "    estimator,\n",
     "    title,\n",
@@ -3574,34 +3477,6 @@
     "    n_jobs=4,\n",
     "    scoring=\"accuracy\",\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# For loop to plot all models - takes a while to run\n",
-    "# for model in models:\n",
-    "    # fig, axes = plt.subplots(3, 2, figsize=(10, 15))\n",
-    "    # title = \"Learning Curves \" + str(model[0])\n",
-    "    # # Cross validation with 50 iterations to get smoother mean test and train\n",
-    "    # # score curves, each time with 20% data randomly selected as a validation set.\n",
-    "    # cv = ShuffleSplit(n_splits=50, test_size=0.2, random_state=0)\n",
-    "    # plot_learning_curve(\n",
-    "    #     model[1],\n",
-    "    #     title,\n",
-    "    #     train_historic_x,\n",
-    "    #     train_historic_y,\n",
-    "    #     axes=axes[:, 0],\n",
-    "    #     ylim=(0.7, 1.01),\n",
-    "    #     cv=cv,\n",
-    "    #     n_jobs=4,\n",
-    "    #     scoring=\"accuracy\",\n",
-    "    # )\n",
-    "\n",
-    "# 32 Minutes"
    ]
   }
  ],
